// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-payout notranslate"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  $ 14.26
</div>
`;

exports[`(2) Detail render 1`] = `
<div
  className="payout-popover-content"
>
  <p>
    <span
      className="label"
    >
      Pending Payout
    </span>
    <span
      className="value"
    >
      $ 14.264
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Beneficiary
    </span>
    <span
      className="value"
    >
      esteemapp
      : 
      3
      % 
      <br />
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Breakdown
    </span>
    <span
      className="value"
    >
      7.132 HBD
       
      <br />
      28.302 HP
       
      <br />
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Payout
    </span>
    <span
      className="value"
    >
      in 4 days
    </span>
  </p>
</div>
`;

exports[`(3) Detail render with full power 1`] = `
<div
  className="payout-popover-content"
>
  <p>
    <span
      className="label"
    >
      Reward
    </span>
    <span
      className="value"
    >
      Power Up 100%
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Pending Payout
    </span>
    <span
      className="value"
    >
      $ 14.264
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Beneficiary
    </span>
    <span
      className="value"
    >
      esteemapp
      : 
      3
      % 
      <br />
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Breakdown
    </span>
    <span
      className="value"
    >
      56.603 HP
       
      <br />
    </span>
  </p>
  <p>
    <span
      className="label"
    >
      Payout
    </span>
    <span
      className="value"
    >
      in 4 days
    </span>
  </p>
</div>
`;
